--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "rxjs": "~7.8.1",
     "sahu": "^0.6.35",
     "tslib": "^2.8.1",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
