--- a/projects/sahu/package.json
+++ b/projects/sahu/package.json
@@ -6,7 +6,8 @@
     "@angular/core": "^18.2.10"
   },
   "dependencies": {
-    "tslib": "^2.8.1"
+    "tslib": "^2.8.1",
+    "xlsx": "^0.18.5"
   },
   "sideEffects": false
 }
