--- a/projects/sahu/package.json
+++ b/projects/sahu/package.json
@@ -3,11 +3,11 @@
   "version": "0.6.67",
   "peerDependencies": {
     "@angular/common": "^18.2.10",
-    "@angular/core": "^18.2.10"
+    "@angular/core": "^18.2.10",
+    "xlsx": "^0.18.5"
   },
   "dependencies": {
-    "tslib": "^2.8.1",
-    "xlsx": "^0.18.5"
+    "tslib": "^2.8.1"
   },
   "sideEffects": false
 }
