--- a/projects/sahu/package.json
+++ b/projects/sahu/package.json
@@ -1,10 +1,11 @@
 {
   "name": "sahu",
-  "version": "0.6.84",
+  "version": "0.6.85",
   "peerDependencies": {
     "@angular/common": "^18.2.10",
     "@angular/core": "^18.2.10",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "pica": "^9.0.1"
   },
   "dependencies": {
     "tslib": "^2.8.1"
