--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.2.10",
+    "@angular/cdk": "^19.2.2",
     "@angular/common": "^18.2.10",
     "@angular/compiler": "^18.2.10",
     "@angular/core": "^18.2.10",
@@ -18,6 +19,7 @@
     "@angular/platform-browser": "^18.2.10",
     "@angular/platform-browser-dynamic": "^18.2.10",
     "@angular/router": "^18.2.10",
+    "moment": "^2.30.1",
     "rxjs": "~7.8.1",
     "sahu": "^0.6.35",
     "tslib": "^2.8.1",
