--- a/projects/sahu/package.json
+++ b/projects/sahu/package.json
@@ -1,11 +1,12 @@
 {
   "name": "sahu",
-  "version": "0.7.12",
+  "version": "0.7.25",
   "peerDependencies": {
     "@angular/common": "^18.2.10",
     "@angular/core": "^18.2.10",
     "xlsx": "^0.18.5",
-    "pica": "^9.0.1"
+    "pica": "^9.0.1",
+    "moment": "^2.30.1"
   },
   "dependencies": {
     "tslib": "^2.8.1"
